fix some issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="title">
-            <span  id="typing-name"></span>
+            <span  class="typing-name"></span>
         </div>
         <nav>
             <ul>
@@ -39,7 +39,7 @@
                 <span>Hello!</span>
                 <div class="title">
                     <span>I'm</span>
-                    <span id="typing-name">Mohamed Amine Doutar</span> 
+                    <span class="typing-name">Mohamed Amine Doutar</span> 
                 </div>
                 <span>Full Stack Web Developer</span>
                 <p>Passionate about creating dynamic, user-friendly web applications. With a journey starting from
