fix some issues

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>I'm Mohamed Amine Doutar. I started learning programming at 10 years old with Python, then moved to
                 Django, HTML, CSS, and JavaScript. Then, at 18, I'm studying at FSSM IAP and continuously upgrading my
                 skills by learning new languages and frameworks. And Now At 20 years old, My goal is to keep growing until the end. If you have a
-                project or idea, don't hesitate to contact me—I'm always excited to collaborate!</p>
+                project or idea, don't hesitate to contact me. I'm always excited to collaborate!</p>
         </section>
         <section id="skills" class="skills">
             <div class="title">
