change some styles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Passionate about creating dynamic, user-friendly web applications. With a journey starting from
                     Python and Django to mastering modern stacks like React and Laravel, I bring creativity and
                     problem-solving to every project. Let's build something amazing together!</p>
-                <button class="talkBTN">Let's Talk</button>
+                <button class="BTN">Let's Talk</button>
                 <div class="social">
                     <a class="facebook" href="https://web.facebook.com/arlert.amine" aria-label="Facebook"><i
                             class="bi bi-facebook"></i></a>
@@ -110,7 +110,7 @@
                     <label for="message" class="form-label">Message</label>
                     <textarea class="form-control" id="message" rows="4" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
+                <button class="BTN" type="submit" class="btn btn-primary">Send Message</button>
             </form>
         </section>
     </main>
