fix the buttons on the header

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
         <nav>
             <ul>
-                <li><a class="focus" href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a name="home" href="#home">Home</a></li>
+                <li><a name="about" href="#about">About</a></li>
+                <li><a name="skills" href="#skills">Skills</a></li>
+                <li><a name="contact" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
