fix typing and shadow box

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <span>Skills</span>
             </div>
             <div class="skill">
-                <span class="prc100">HTML</span>
+                <span class="" style="--after-width:10%;">HTML</span>
                 <span class="prc90">CSS</span>
                 <span class="prc90">JavaScript</span>
                 <span class="prc70">Node.js</span>
